Replacing images because other images were istock photos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="hero_sect">
             <div class="hero_img">
-                <img src="assets/imgs/779x405.png" alt="image description">
+                <img src="assets/imgs/779x405.webp" alt="image description">
             </div>
             <div class="hero_excerpt">
                 <div class="hero_excerpt_txt">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img.png" alt="Linda Pam Montgomery">
+                        <img src="assets/imgs/150x150.webp" alt="Linda Pam Montgomery">
                     </div>
                     <div class="author_n_date">
                         <a href="">Linda Pam Montgomery</a>
@@ -68,7 +68,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/3-col-excerpts2-img.png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -78,7 +78,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-2.png" alt="Brenda Sue Fredricks">
+                        <img src="assets/imgs/150x150.webp" alt="Brenda Sue Fredricks">
                     </div>
                     <div class="author_n_date">
                         <a href="">Brenda Sue Fredricks</a>
@@ -89,7 +89,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/375x190_(2).png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -99,7 +99,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-3.png" alt="Rachel Anne Smith">
+                        <img src="assets/imgs/150x150.webp" alt="Rachel Anne Smith">
                     </div>
                     <div class="author_n_date">
                         <a href="">Rachel Anne Smith</a>
@@ -110,7 +110,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/375x190_(3).png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -120,7 +120,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-4.png" alt="Connie Rose Brown">
+                        <img src="assets/imgs/150x150.webp" alt="Connie Rose Brown">
                     </div>
                     <div class="author_n_date">
                         <a href="">Connie Rose Brown</a>
@@ -130,7 +130,7 @@
             </div>
         </div><!-- end of three_col_exc -->
         <div class="cta_sect">
-            <img src="assets/imgs/logo_sq.png">
+            <img src="assets/imgs/logo_sq.webp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe molestias natus?
             <button><a href="">Subscribe</a></button>
         </div>
@@ -139,7 +139,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/375x190_(3).png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -149,7 +149,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-2.png" alt="Brenda Sue Fredricks">
+                        <img src="assets/imgs/150x150.webp" alt="Brenda Sue Fredricks">
                     </div>
                     <div class="author_n_date">
                         <a href="">Brenda Sue Fredricks</a>
@@ -160,7 +160,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/375x190_(4).png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -170,7 +170,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-3.png" alt="Rachel Anne Smith">
+                        <img src="assets/imgs/150x150.webp" alt="Rachel Anne Smith">
                     </div>
                     <div class="author_n_date">
                         <a href="">Rachel Anne Smith</a>
@@ -181,7 +181,7 @@
 
             <div class="child child_left">
                 <div class="three_col_thumbnail">
-                    <img src="assets/imgs/375x190_(5).png" alt="img desc">
+                    <img src="assets/imgs/375x190.webp" alt="img desc">
                 </div>
                 <div>
                     <h3><a href="">Lorem ipsum dolor sit amet consectetur adipisicing</a></h3>
@@ -191,7 +191,7 @@
 
                 <div class="exc_info_box">
                     <div class="img_div">
-                        <img src="assets/imgs/profile-img-4.png" alt="Connie Rose Brown">
+                        <img src="assets/imgs/150x150.webp" alt="Connie Rose Brown">
                     </div>
                     <div class="author_n_date">
                         <a href="">Connie Rose Brown</a>
@@ -215,7 +215,7 @@
                         reprehenderit , quis a b c d e f g corrupti!
                         <div class="exc_info_box">
                             <div class="img_div">
-                                <img src="assets/imgs/profile-img-2.png" alt="Brenda Sue Fredricks">
+                                <img src="assets/imgs/150x150.webp" alt="Brenda Sue Fredricks">
                             </div>
                             <div class="author_n_date">
                                 <a href="">Brenda Sue Fredricks</a>
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img"><img src="assets/imgs/160x140_(1).png"></div>
+                    <div class="img"><img src="assets/imgs/160x140.webp"></div>
                 </div>
             </div>
 
@@ -236,7 +236,7 @@
                         reprehenderit , quis a b c d e f g corrupti!
                         <div class="exc_info_box">
                             <div class="img_div">
-                                <img src="assets/imgs/profile-img-3.png" alt="Rachel Anne Smith">
+                                <img src="assets/imgs/150x150.webp" alt="Rachel Anne Smith">
                             </div>
                             <div class="author_n_date">
                                 <a href="">Rachel Anne Smith</a>
@@ -244,7 +244,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img"><img src="assets/imgs/160x140_(2).png"></div>
+                    <div class="img"><img src="assets/imgs/160x140.webp"></div>
                 </div>
             </div>
 
@@ -257,7 +257,7 @@
                         reprehenderit , quis a b c d e f g corrupti!
                         <div class="exc_info_box">
                             <div class="img_div">
-                                <img src="assets/imgs/profile-img-4.png" alt="Connie Rose Brown">
+                                <img src="assets/imgs/150x150.webp" alt="Connie Rose Brown">
                             </div>
                             <div class="author_n_date">
                                 <a href="">Connie Rose Brown</a>
@@ -265,7 +265,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img"><img src="assets/imgs/1-col-excerpts-img.png"></div>
+                    <div class="img"><img src="assets/imgs/160x140.webp"></div>
                 </div>
             </div>
 
@@ -278,7 +278,7 @@
                         reprehenderit , quis a b c d e f g corrupti!
                         <div class="exc_info_box">
                             <div class="img_div">
-                                <img src="assets/imgs/profile-img-3.png" alt="Rachel Anne Smith">
+                                <img src="assets/imgs/150x150.webp" alt="Rachel Anne Smith">
                             </div>
                             <div class="author_n_date">
                                 <a href="">Rachel Anne Smith</a>
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img"><img src="assets/imgs/160x140_(3).png"></div>
+                    <div class="img"><img src="assets/imgs/160x140.webp"></div>
                 </div>
             </div>
         </div>
@@ -301,7 +301,7 @@
 
             <div class="side_links">
                 <div class="side_main_heading">
-                    <img class="logo" src="assets/imgs/sq_globe.png" alt="logo">
+                    <img class="logo" src="assets/imgs/sq_globe.webp" alt="logo">
                     <h2>The Title of of Website</h2>
                 </div>
 
